# Hatena-Intern-2020

./: grpc_health_probe  index.html  skaffold.yaml
k8s/renderer-go/: app.yaml  kustomization.yaml
k8s/renderer-ts/: app.yaml
pb/scripts/: compile
services/blog/templates/: index.html
services/renderer-go/: main.go
services/renderer-go/config/: config.go
services/renderer-go/grpc/: server.go  server_test.go
services/renderer-go/pb/title_fetcher/: title_fetcher.pb.go
services/renderer-go/renderer/: renderer.go  renderer_test.go
services/renderer-rs/: Cargo.toml  build.rs
services/renderer-rs/src/protos/: .gitignore
services/title-fetcher/: ANSWER.md  Cargo.toml  README.md
services/title-fetcher/src/: lib.rs  main.rs  parser.rs
